WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312284
AX: aria-owns cycle detection is unbounded, which can cause hangs for deep aria-owns chains
https://bugs.webkit.org/show_bug.cgi?id=312284
Summary
AX: aria-owns cycle detection is unbounded, which can cause hangs for deep ar...
Tyler Wilcock
Reported
2026-04-14 10:10:10 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-14 10:10:17 PDT
<
rdar://problem/174753621
>
Tyler Wilcock
Comment 2
2026-04-14 10:16:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62745
EWS
Comment 3
2026-04-15 07:57:45 PDT
Committed
311288@main
(092bf6b43083): <
https://commits.webkit.org/311288@main
> Reviewed commits have been landed. Closing PR #62745 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug